<resources>
    <string name="app_name">GTA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_new_subscription">Create New Subscription</string>
    <string name="title_activity_subscriptions">Subscriptions</string>

    <string name="new_subscription_publisher">Publisher:</string>
    <string name="new_subscription_field_name">Field Name:</string>
    <string name="new_subscription_field_value">Field Value:</string>
    <string name="new_subscription_action_add_filter_short">Add Filter</string>
    <string name="new_subscription_action_subscribe">Subscribe</string>
    <string name="new_subscription_invalid_field_value">Field value cannot be empty</string>
    <string name="new_subscription_eq">eq</string>
    <string name="new_subscription_gt">gt</string>
    <string name="new_subscription_lt">lt</string>
    <string name="new_subscription_gte">gte</string>
    <string name="new_subscription_lte">lte</string>

    <string-array name="publishers_array">
        <item>TTC</item>
        <item>Air Sensor</item>
        <item>Bixi</item>
    </string-array>

    <string-array name="ttc_field_array">
        <item>Everything</item>
        <item>Route Number</item>
        <item>Vehicle ID</item>
    </string-array>

    <string-array name="air_sensor_field_array">
        <item>Everything</item>
        <item>@string/co2</item>
        <item>@string/co</item>
        <item>@string/nox</item>
        <item>@string/aqhi</item>
        <item>@string/o3</item>
        <item>@string/pm</item>
    </string-array>

    <string-array name="bixi_field_array">
        <item>Everything</item>
        <item>Station ID</item>
        <item>Station Name</item>
        <item>Number of Bikes</item>
        <item>Number of Empty Docks</item>
    </string-array>

    <string-array name="ttc_field_names_array">
        <item>GPStime</item>
        <item>coordinates</item>
        <item>dateTime</item>
        <item>dirTag</item>
        <item>heading</item>
        <item>lastTime</item>
        <item>predictable</item>
        <item>routeNumber</item>
        <item>name</item>
        <item>timestamp</item>
        <item>id</item>
        <item>category</item>
    </string-array>

    <string-array name="road_traffic_field_names_array">
        <item>publicationTime</item>
        <item>coordinates_start</item>
        <item>coordinates_end</item>
        <item>supplierCalculatedDataQuality</item>
        <item>travelTime</item>
        <item>elaboratedDataID</item>
        <item>firstLocationReferencePointBEAR</item>
        <item>firstLocationReferencePointFOW</item>
        <item>firstLocationReferencePointFRC</item>
        <item>lastLocationReferencePointBEAR</item>
        <item>lastLocationReferencePointFOW</item>
        <item>lastLocationReferencePointFRC</item>
        <item>From</item>
        <item>To</item>
        <item>density</item>
        <item>flow</item>
        <item>averageSpeed</item>
    </string-array>
    <string name="title_activity_historical_dashboard">Historical Dashboard</string>


    <string name="title_activity_new_historical_chart">New Historical Chart</string>
    <string name="new_historical_chart_spinner_default">-</string>
    <string name="new_historical_chart_traffic_data_type">Type of Traffic Data: </string>
    <string name="new_historical_chart_traffic_name">Name of the Chart: </string>
    <string-array name="new_historical_chart_traffic_data_array">
        <item>Air Quality</item>
        <item>Road Traffic</item>
    </string-array>
    <string name="new_historical_chart_time_range">Time range to plot: </string>
    <string-array name="new_historical_chart_time_range_array">
        <item>Three Days</item>
        <item>One Week</item>
        <item>One Month</item>
    </string-array>
    <string name="new_historical_chart_start_time">Start Time: </string>
    <string name="new_historical_chart_start_date">Start Date: </string>
    <string name="new_historical_chart_end_time">End Time: </string>
    <string name="new_historical_chart_end_date">End Date: </string>

    <string name="add_new_historical_chart_button_next">Next</string>
    <string name="add_new_historical_chart_button_complete">Finish</string>
    <string name="new_historical_chart_hw_selection">Select a marker address of interest: </string>
    <string-array name="new_historical_chart_highways">
        <item>HWY 401</item>
        <item>HWY 407</item>
        <item>HWY 400</item>
    </string-array>
    <string name="new_historical_chart_highway_type">Data Type: </string>
    <string-array name="new_historical_chart_graph_type">
        <item>@string/item_avg_speed</item>
        <item>@string/item_avg_travel_time</item>
    </string-array>
    <string name="new_historical_chart_air_quality_data_type_title">Air Quality Data Type: </string>
    <string-array name="air_sensor_data_types">
        <item>@string/co2</item>
        <item>@string/co</item>
        <item>@string/nox</item>
        <item>@string/aqhi</item>
        <item>@string/o3</item>
        <item>@string/pm</item>
    </string-array>
    <string name="co2">Carbon Dioxide (CO2)</string>
    <string name="co">Carbon Monoxide (CO)</string>
    <string name="nox">Nitrogen Oxides (NOx)</string>
    <string name="aqhi">Air Quality Health Index (AQHI)</string>
    <string name="o3">Ozone (O3)</string>
    <string name="pm">Particulate Matter (PM)</string>

    <string name="item_avg_speed">Average Speed</string>
    <string name="item_avg_travel_time">Travel Time</string>

    <string name="title_activity_new_historical_chart_map">Select a location of interest </string>
    <string-array name="historical_dashboard_graph_menu_items">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string name="title_activity_test_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_username">Username cannot be empty</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_unmatch_password">Password should match</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_register">New to us?</string>
    <string name="action_register">Register</string>

    <string name="unsubscribe">Unsubscribe</string>
    <string name="preference_file_key">ca.cvst.gta.PREFERENCE_FILE_KEY</string>
    <string name="key_username">username</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
