<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.cvst.gta.NewSubscriptionActivity">

    <ProgressBar
        android:id="@+id/subscription_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/subscription_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_subscription_publisher" />

            <Spinner
                android:id="@+id/spinner_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_subscription_field_name" />

            <Spinner
                android:id="@+id/spinner_field_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_subscription_field_value" />

            <EditText
                android:id="@+id/edit_text_field_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/add_filter"
                android:imeActionLabel="@string/new_subscription_action_add_filter_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group_operation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_eq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_subscription_eq" />

            <RadioButton
                android:id="@+id/radio_gt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_subscription_gt" />

            <RadioButton
                android:id="@+id/radio_lt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_subscription_lt" />

            <RadioButton
                android:id="@+id/radio_gte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_subscription_gte" />

            <RadioButton
                android:id="@+id/radio_lte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_subscription_lte" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_subscription_action_add_filter_short" />

            <Button
                android:id="@+id/btn_subscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_subscription_action_subscribe" />

            <!--<Button-->
            <!--android:id="@+id/email_sign_in_button"-->
            <!--style="?android:textAppearanceSmall"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:text="@string/action_sign_in"-->
            <!--android:textStyle="bold" />-->

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/filter_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<EditText-->
        <!--android:id="@+id/password"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/prompt_password"-->
        <!--android:imeActionId="@+id/login"-->
        <!--android:imeActionLabel="@string/action_sign_in_short"-->
        <!--android:imeOptions="actionUnspecified"-->
        <!--android:inputType="textPassword"-->
        <!--android:maxLines="1"-->
        <!--android:singleLine="true" />-->

        <!--</android.support.design.widget.TextInputLayout>-->

    </LinearLayout>
</LinearLayout>
